--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -73,4 +73,6 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="skip">Skip</string>
+    <string name="sdcard_info_title">Number of files in each folder</string>
+    <string name="sdcard_info_context_explane">Current / Maximum</string>
 </resources>
