--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,7 +6,7 @@
     <string name="main_menu_prs">Parking Recording Setting</string>
     <string name="main_menu_fp">File Playback</string>
     <string name="main_menu_mirs">Movie/Still Image Recording Setting</string>
-    <string name="main_menu_vt">Vehicle Type</string>
+    <string name="main_menu_em">Emergency Call Setting</string>
     <string name="main_menu_dsfs">Driving Support Function Setting</string>
     <string name="main_menu_nsg">Notification Sound Guidance</string>
     <string name="main_menu_ss">System Setting</string>
@@ -68,14 +68,9 @@
     <string name="tv_monitor_operation_off">OFF</string>
     <string name="tv_monitor_operation_dim">Dim</string>
 
-    <string name="vehicle_type">Vehicle Type</string>
-    <string name="vehicle_type_mini_sedan">Mini sedan</string>
-    <string name="vehicle_type_minivan">Minivan</string>
-    <string name="vehicle_type_medium_sedan">Medium sedan</string>
-    <string name="vehicle_type_rv">RV</string>
-    <string name="vehicle_type_large_sedan">Large sedan</string>
-    <string name="vehicle_type_suv">SUV</string>
-    <string name="vehicle_type_others">Others</string>
+    <!--<string name="vehicle_type">Vehicle Type</string>-->
+    <string name="emergency_contacts">Display Emergency Contacts</string>
+    <string name="emergency_automatic_setting">Emergency Automatic Report Setting</string>
 
     <string name="sys_phone_number">Phone Number</string>
     <string name="sys_network">Network</string>
