--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="driving_setting_marqueeText_departure">ONに設定すると、自車が停車中に前走車との距離が遠くなった時にお知らせします</string>
     <string name="driving_setting_marqueeText_install">走行車線を正しく検出するために設定します。本機を取り付けた水平方向の位置を選択します</string>
     <string name="driving_setting_marqueeText_pedestrain">ONに設定すると、歩行者が近づいた時にお知らせします</string>
+    <string name="emergency_setting_marqueeText_auto">OFFに設定すると、衝撃を検知したときでもコールセンターに自動通報しません</string>
 
     <string name="user_marqueeText">運転された方ごとに運転レポートを作成するために、車を運転される方を選びます</string>
     <string name="movie_record_marqueeText_audio">OFFに設定すると、内蔵マイクによる音声の記録を停止します</string>
