合并一些选项到system setting下

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -167,4 +167,5 @@
     <string name="sdcard_info_title">Number of files in each folder</string>
     <string name="sdcard_info_context_explane">Current / Maximum</string>
 
+    <string name="system_range_of">Range of</string>
 </resources>
