--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="tv_system_settings_lcd_brightness">モニター明るさ</string>
     <string name="tv_system_settings_screen_power_saving">モニター画面節電設定</string>
     <string name="tv_system_settings_installation_tool">設置ツール</string>
+    <string name="tv_system_settings_vehicle_type">車両タイプ</string>
     <string name="tv_system_settings_setting_initialization">設定初期化</string>
     <string name="tv_system_settings_installation_wizard">セットアップ</string>
     <string name="tv_system_settings_2nd_camera">2ndカメラ設定</string>
@@ -89,6 +90,7 @@
     <string name="sys_open_license">オープンソースライセンス</string>
     <string name="net_conn">接続</string>
     <string name="net_not_conn">接続されていない</string>
+
 
     <string name="driving_setting_range_horizon">地平線の位置に線を移動させ、決定ボタンを押してください</string>
     <string name="driving_setting_range_hood">ボンネット先端の位置に線を移動させ、決定ボタンを押してください</string>
@@ -171,4 +173,5 @@
     <string name="sdcard_info_title">各フォルダのファイル数</string>
     <string name="sdcard_info_context_explane">現在 / 最大</string>
 
+    <string name="system_range_of">検出範囲</string>
 </resources>
