--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -107,7 +107,7 @@
     <string name="mounting_position_middle">Middle</string>
     <string name="mounting_position_right">Right</string>
     <string name="weather_report">Weather Report</string>
-    <string name="help">Help</string>
+    <string name="help">Inquiries</string>
     <string name="service_information_notified">Service Information Notified</string>
     <string name="main_menu_us">User Selection</string>
     <string name="set_wizard_help_context_start_setting">Setting is about to start</string>
