--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,7 @@
     <string name="tv_system_settings_lcd_brightness">LCD Brightness</string>
     <string name="tv_system_settings_screen_power_saving">Monitor screen Power saving setting</string>
     <string name="tv_system_settings_installation_tool">Installation tool</string>
+    <string name="tv_system_settings_vehicle_type">Type of vehicle</string>
     <string name="tv_system_settings_setting_initialization">Setting initialization</string>
     <string name="tv_system_settings_installation_wizard">Installation wizard</string>
     <string name="tv_system_settings_2nd_camera">2nd Camera</string>
@@ -55,7 +56,6 @@
     <string name="sdcard_init_success">Format Success</string>
     <string name="sdcard_init_fail">Format Failed</string>
 
-
     <string name="tv_notifacation_valume">Volume setting</string>
     <string name="tv_playback_valume">Volume setting</string>
     <string name="tv_brightness_title">Brightness +2</string>
@@ -67,6 +67,15 @@
     <string name="tv_monitor_operation_on">Always ON</string>
     <string name="tv_monitor_operation_off">OFF</string>
     <string name="tv_monitor_operation_dim">Dim</string>
+
+    <string name="vehicle_type">Vehicle Type</string>
+    <string name="vehicle_type_mini_sedan">Mini sedan</string>
+    <string name="vehicle_type_minivan">Minivan</string>
+    <string name="vehicle_type_medium_sedan">Medium sedan</string>
+    <string name="vehicle_type_rv">RV</string>
+    <string name="vehicle_type_large_sedan">Large sedan</string>
+    <string name="vehicle_type_suv">SUV</string>
+    <string name="vehicle_type_others">Others</string>
 
     <!--<string name="vehicle_type">Vehicle Type</string>-->
     <string name="emergency_contacts">Display Emergency Contacts</string>
